test/Interop/Cxx/class/sendable-typechecker.code
// RUN: %target-typecheck-verify-language -I %S/Inputs -language-version 6 -cxx-interoperability-mode=upcoming-language

import Sendable // expected-warning {{add '@preconcurrency' to treat 'Sendable'-related errors from module 'Sendable' as warnings}}

fn takesSendable<T: Sendable>(_ x: T.Type) {}

takesSendable(HasPrivatePointerField.this) // expected-error {{type 'HasPrivatePointerField' does not conform to the 'Sendable' protocol}}
takesSendable(HasProtectedPointerField.this) // expected-error {{type 'HasProtectedPointerField' does not conform to the 'Sendable' protocol}}
takesSendable(HasPublicPointerField.this) // expected-error {{type 'HasPublicPointerField' does not conform to the 'Sendable' protocol}}

takesSendable(HasPrivateNonSendableField.this) // expected-error {{type 'HasPrivateNonSendableField' does not conform to the 'Sendable' protocol}}
takesSendable(HasProtectedNonSendableField.this) // expected-error {{type 'HasProtectedNonSendableField' does not conform to the 'Sendable' protocol}}
takesSendable(HasPublicNonSendableField.this) // expected-error {{type 'HasPublicNonSendableField' does not conform to the 'Sendable' protocol}}

takesSendable(DerivedFromHasPublicPointerField.this) // expected-error {{type 'DerivedFromHasPublicPointerField' does not conform to the 'Sendable' protocol}}
takesSendable(DerivedFromHasPublicNonSendableField.this) // expected-error {{type 'DerivedFromHasPublicNonSendableField' does not conform to the 'Sendable' protocol}}
takesSendable(DerivedFromHasPrivatePointerField.this) // expected-error {{type 'DerivedFromHasPrivatePointerField' does not conform to the 'Sendable' protocol}}

takesSendable(DerivedPrivatelyFromHasPublicPointerField.this) // expected-error {{type 'DerivedPrivatelyFromHasPublicPointerField' does not conform to the 'Sendable' protocol}}
takesSendable(DerivedPrivatelyFromHasPublicNonSendableField.this) // expected-error {{type 'DerivedPrivatelyFromHasPublicNonSendableField' does not conform to the 'Sendable' protocol}}
takesSendable(DerivedPrivatelyFromHasPrivatePointerField.this) // expected-error {{type 'DerivedPrivatelyFromHasPrivatePointerField' does not conform to the 'Sendable' protocol}}

takesSendable(DerivedProtectedFromHasPublicPointerField.this) // expected-error {{type 'DerivedProtectedFromHasPublicPointerField' does not conform to the 'Sendable' protocol}}
takesSendable(DerivedProtectedFromHasPublicNonSendableField.this) // expected-error {{type 'DerivedProtectedFromHasPublicNonSendableField' does not conform to the 'Sendable' protocol}}
takesSendable(DerivedProtectedFromHasPrivatePointerField.this) // expected-error {{type 'DerivedProtectedFromHasPrivatePointerField' does not conform to the 'Sendable' protocol}}
